--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint:js": "eslint \"**/*.{js,ts,html,vue}\" --fix",
-    "lint:css": "stylelint \"**/*.{css,less,sass,scss,html,vue}\" --fix"
+    "lint:css": "stylelint \"**/*.{css,less,sass,scss,html,vue}\" --fix",
+    "docs": "vitepress init",
+    "docs:dev": "env-cmd -x vitepress dev docs --host=$VITE_HOST --port=$VITE_DOCS_PORT",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "env-cmd -x vitepress preview docs --host=$VITE_HOST --port=$VITE_DOCS_PORT"
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
@@ -27,6 +31,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "babel-eslint": "^10.1.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-vue": "^9.9.0",
@@ -44,6 +49,7 @@
     "vconsole": "^3.15.0",
     "vite": "^4.2.0",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-setup-extend": "^0.4.0"
+    "vite-plugin-vue-setup-extend": "^0.4.0",
+    "vitepress": "^1.0.0-alpha.60"
   }
 }
