--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 
 node_modules
 dist
+dist.*
 dist-ssr
 *.local
 
@@ -20,7 +21,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
