--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ dist.*
 dist-ssr
 *.local
 
+docs/.vitepress/cache
+docs/.vitepress/dist
+docs/.vitepress/dist.*
+
 # Editor directories and files/*
 .idea
 .DS_Store
