--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,19 +30,22 @@
     "useElementBounding": "readonly",
     "useElementSize": "readonly",
     /* 自定义 */
-    "resolve": "readonly",
     "http": "readonly",
     "store": "readonly",
     "useListener": "readonly",
     "useTimer": "readonly",
     "useCompName": "readonly",
     "usePage": "readonly",
-    "mexp": "readonly",
+    "resolve": "readonly",
     "dayjsFormat": "readonly",
+    "mexp": "readonly",
     "cache": "readonly",
     "typeOf": "readonly",
     "deepCopy": "readonly",
     "recursion": "readonly",
+    "debounce": "readonly",
+    "throttle": "readonly",
+    "els": "readonly",
     "openUrl": "readonly",
     "closeUrl": "readonly",
     "isEqual": "readonly",
