fix:动态引入静态资源打包后导致的问题

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,7 @@
     "useTimer": "readonly",
     "useCompName": "readonly",
     "usePage": "readonly",
-    "resolve": "readonly",
+    "getAsset": "readonly",
     "dayjsFormat": "readonly",
     "mexp": "readonly",
     "cache": "readonly",
