--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,11 +36,11 @@
     "vconsole": "readonly",
     "http": "readonly",
     "store": "readonly",
+    "getAsset": "readonly",
     "useListener": "readonly",
     "useTimer": "readonly",
     "useCompName": "readonly",
     "usePage": "readonly",
-    "getAsset": "readonly",
     "dayjsFormat": "readonly",
     "mexp": "readonly",
     "cache": "readonly",
@@ -50,6 +50,7 @@
     "debounce": "readonly",
     "throttle": "readonly",
     "els": "readonly",
+    "rx": "readonly",
     "openUrl": "readonly",
     "closeUrl": "readonly",
     "isEqual": "readonly",
