--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint:js": "eslint \"**/*.{js,ts,html,vue}\" --fix",
-    "lint:css": "stylelint \"**/*.{css,less,sass,scss,html,vue}\" --fix",
-    "docs": "vitepress init",
-    "docs:dev": "env-cmd -x vitepress dev docs --host=$VITE_HOST --port=$VITE_DOCS_PORT",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "env-cmd -x vitepress preview docs --host=$VITE_HOST --port=$VITE_DOCS_PORT",
-    "docs:serve": "env-cmd -x vitepress serve docs --port=$VITE_DOCS_PORT"
+    "lint:css": "stylelint \"**/*.{css,less,sass,scss,html,vue}\" --fix"
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
@@ -50,7 +45,6 @@
     "vconsole": "^3.15.0",
     "vite": "^4.2.0",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vitepress": "^1.0.0-alpha.60"
+    "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
