--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "vue3-template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "start": "npm run dev -- --open",
     "dev": "vite",
