--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
     "typeOf": "readonly",
     "deepCopy": "readonly",
     "recursion": "readonly",
+    "delayPromise": "readonly",
     "debounce": "readonly",
     "throttle": "readonly",
     "els": "readonly",
