--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
     "openUrl": "readonly",
     "closeUrl": "readonly",
     "isEqual": "readonly",
-    "isWhite": "readonly"
+    "isWhite": "readonly",
+    "numberToChinese": "readonly"
   }
 }
